# renvar

./: .gitignore  Cargo.toml  README.md  justfile  rustfmt.toml
src/: case_insensitive_postfixed.rs  convert.rs  de.rs  env.rs  error.rs  lib.rs  postfix.rs  postfixed.rs  prefix.rs  prefixed.rs  proc_macros.rs  sanitize.rs
src/docs/: crate.md
src/postfix/: case_insensitive.rs  mod.rs  postfixed.rs
src/prefix/: case_insensitive.rs  mod.rs  prefixed.rs
