[package]
name = "renvar"
authors = ["Nagy Botond"]
description = "Library to deserialize environment variables in to Rust datatypes"
repository = "https://github.com/westernwontons/renvar"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.163"

[dev-dependencies]
serde = { version = "1.0.163", features = ["derive"] }

[features]
prefixed = []
postfixed = []
with_trimmer = []

default = []

full = ["prefixed", "postfixed", "with_trimmer"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
features = ["full"]
