[package]
name = "renvar"
authors = ["Nagy Botond"]
description = "Library to deserialize environment variables in to Rust datatypes"
repository = "https://github.com/westernwontons/renvar"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
keywords = ["environment", "variable", "deserialization", "serde"]

[dependencies]
serde = "1.0.208"

[dev-dependencies]
serde = { version = "1.0.208", features = ["derive"] }

[features]
prefixed = []
case_insensitive_prefixed = []
postfixed = []
case_insensitive_postfixed = []
with_trimmer = []
serde = []

default = []

full = [
	"prefixed",
	"case_insensitive_prefixed",
	"postfixed",
	"case_insensitive_postfixed",
	"with_trimmer",
	"serde",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
features = ["full"]
